[tool.poetry]
name = "musical-notes"
version = "0.1.0"
description = ""
authors = ["dev_JosuehHenrique <josuehenrique2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
